@@ -148,7 +148,7 @@ public class Variable implements Comparable<Variable> {
   public int compareTo(Variable o) {
     if (o == null) throw new IllegalArgumentException();
     if (o.sequence != this.sequence) throw new IllegalArgumentException();
-    return (new Integer(this.index).compareTo(o.index));
+    return (Integer.valueOf(this.index).compareTo(o.index));
   }
 
   /**
